--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,4 +19,4 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
-} 
+}
