--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "islamic-hadiths-collection",
+  "name": "islamic-prayer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "next": "^14.1.0",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.9.7",
+    "lucide-react": "^0.359.0",
+    "next": "^14.1.4",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "@types/node": "^20.14.0",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5"
   }
 }
