--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.1",
     "lucide-react": "^0.359.0",
@@ -22,7 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.1",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "xmldom": "^0.6.0"
   },
