--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/amiri-quran": "^5.2.7",
     "@fontsource/noto-naskh-arabic": "^5.2.5",
     "@fontsource/scheherazade-new": "^5.2.5",
+    "@pinecone-database/pinecone": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.359.0",
     "next": "^14.1.4",
     "next-themes": "^0.3.0",
+    "openai": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.1",
